--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <p>* arrow left/right  : phi -/+</p>
                                 <p>* 7/8               : modulation frequency x -/+</p>
                                 <p>* 9/0               : modulation frequency y -/+</p>
-                                <p>* s                 : save png</p>
+                                <!-- <p>* s                 : save png</p> -->
                             </div>
                         </div>
                         
